--- a/index.htm
+++ b/index.htm
@@ -339,7 +339,7 @@
         <a href="" class="travel"></a>
     </div>
     <aside class="themerack">
-        <button class="themebtn" id="w" onclick="themer('w')"></button>
+        <button class="themebtn" id="w" onclick="themer('w')" style="background-color: rgb(65, 85, 128)"></button>
         <button class="themebtn" id="m" style="background-color: palegoldenrod;" onclick="themer('m')"></button>
         <button class="themebtn" id="a" style="background-color: lightsalmon;" onclick="themer('a')"></button>
         <button class="themebtn" id="n" style="background-color: darkslateblue;" onclick="themer('n')"></button>
