finished for now now

--- a/index.htm
+++ b/index.htm
@@ -14,13 +14,12 @@
         <section class="keyrack">
             <button class="key pressed" id="one" onclick="changePage(this.id)">HOME</button>
             <button class="key" id="two" onclick="changePage(this.id)">CONFED</button>
-            <button class="key" id="thr" onclick="changePage(this.id)">EVENTS</button>
+            <button class="key" id="thr" onclick="changePage(this.id)">EXTRAS</button>
             <button class="key" id="four" onclick="changePage(this.id)">COURSES</button>
         </section>
         <section class="page">
             <div class="pg one">
                 <div class="mainwelcome">
-                    Welcome, Freshies
                 </div>
                 <div class="meetcsc home">FAQ</div>
                 <div class="faqholder">
@@ -166,14 +165,32 @@
                     <div class="missiondesc ge10d">It is required that you must have 8 pts. per C, and that the events  you attend must go under the correct C in your website. Church require religious activities, Classroom require lectures, speeches, and workshops, Culture require Cultural events, or important traditional events, Community require reachouts and service events, and Court require sports events. Journal Reflections per event you attended are also required in your website as they make up the content of your site and they also have a format (to be provided) to be followed. </div>
                     <div class="missiondesc ge10d">So far, That's all what you need to know for GE10 for now !</div>
                 </div>
-                <div class="meetcsc home">GE10 DTR</div>
-                
+                <!-- <div class="meetcsc home">GE10 DTR</div>
+                <section class="dtr slideshow" style="--dur: 20s; --slids: 10;">
+                    <div class="CCpics slide" style="--sl:0"><img src="./gifs/2.png" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:1"><img src="./gifs/3.png" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:2"><img src="./gifs/4.png" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:3"><img src="./gifs/5.png" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:4"><img src="./gifs/6.png" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:5"><img src="./gifs/7.png" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:6"><img src="./gifs/8.png" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:7"><img src="./gifs/9.png" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:8"><img src="./gifs/10.png" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:9"><img src="./gifs/11.png" width="100%" height="100%" alt=""></div>
+                </section> -->
                 <div class="meetcsc home">GE10 SAMPLE SITES</div>
                 <div class="ge10holder">
                     <img src="./gifs/My WPE ONline.gif" class="wpelogo" alt="">
                     <a href="https://baxstar17.github.io/WPE-Online-Journal/" class="wpelink wannaccs">Here's my GE10 Journal for reference</a>
                 </div>
                 <div class="meetcsc home">Facilities AND PICS</div>
+                <section class="CC slideshow" style="--dur: 20s; --slids: 5;">
+                    <div class="CCpics slide" style="--sl:0"><img src="./gifs/UCS (1).jpg" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:1"><img src="./gifs/UCS (2).jpg" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:2"><img src="./gifs/UCS (3).jpg" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:3"><img src="./gifs/UCS (4).jpg" width="100%" height="100%" alt=""></div>
+                    <div class="CCpics slide" style="--sl:4"><img src="./gifs/UCS (5).jpg" width="100%" height="100%" alt=""></div>
+                </section>
             </div>
             <div class="pg two">
                 <div class="meetcsc">
@@ -278,12 +295,11 @@
                 <div class="meetcsc events">
                     JOIN THE FRESHMEN GC!
                 </div>
-                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FConfederatesStudentCouncil%2Fposts%2Fpfbid06jHnbRbTc2GaQBANpSmpVhiKUptdaaZMgZHdcyHVX5isVBd8zSweugMy4vEufKRNl&show_text=true&width=500" width="100%" height="673" style="border:none; background-color: var(--monochrom); color: var(--monochrom); overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FConfederatesStudentCouncil%2Fposts%2Fpfbid06jHnbRbTc2GaQBANpSmpVhiKUptdaaZMgZHdcyHVX5isVBd8zSweugMy4vEufKRNl&show_text=true&width=500" width="100%" height="673" style="border:none; background-color: var(--lightprim); color: var(--monocont); overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                 <div class="meetcsc events">
                     LATEST NEWS FROM CONFED:
                 </div>
-                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FConfederatesStudentCouncil%2Fposts%2Fpfbid03WDMHVNd9RCabZZC9MDNs9zCGBPRrfEdMzdgf7Dkh1qi8bkknSt529oewb9ScCa5l&show_text=true&width=500" width="100%" height="673" style="border:none; background-color: var(--monochrom); color: var(--monochrom);overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                <div class="meetcsc events">BLAST FROM THE PAST</div>
+                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FConfederatesStudentCouncil%2Fposts%2Fpfbid03WDMHVNd9RCabZZC9MDNs9zCGBPRrfEdMzdgf7Dkh1qi8bkknSt529oewb9ScCa5l&show_text=true&width=500" width="100%" height="673" style="border:none; background-color: var(--lightprim); color: var(--lightprim);overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
             <div class="pg four">
                 <div class="courses bscs" onclick="flipcard('bscs')">
@@ -294,35 +310,45 @@
                         Bachelor of Science in Computer Science (BSCS) is a four-year program that includes the study of computing concepts and theories, algorithmic foundations, and new developments in computing.
                     </div>
                 </div>
-                <div class="board"></div>
+                <div class="board">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/uWT6OQ2wjvg?si=Zo4oM80PKaJvsExG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
                 <div class="courses bsit" onclick="flipcard('bsit')">
                     <div class="front it">BSIT</div>
                     <div class="back it">
                         The Bachelor of Science in Information Technology (BSIT) is a four-year program that prepares students to be IT professionals well-versed on IT applications, including web, database, programming, and networking technologies.
                     </div>
                 </div>
-                <div class="board"></div>
+                <div class="board">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/1ac_JqEBaWY?si=jRCVb5mcdKMHWf7s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
                 <div class="courses bsis" onclick="flipcard('bsis')">
                     <div class="front is">BSIS</div>
                     <div class="back is">
                         Bachelor of Science in Information Systems is a four-year degree program which focuses on the design and implementation of computer-based information systems and other ICT solutions to address the demands in existing business processes.
                     </div>
                 </div>
-                <div class="board"></div>
+                <div class="board">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dLfpZtIacbc?si=M9-waOe2EomFST1U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
                 <div class="courses blis" onclick="flipcard('blis')">
                     <div class="front lis">BLIS</div>
                     <div class="back lis">
                         Bachelor of Library and Information Sciences is a four-year degree program designed to prepare students for career opportunities in professional librarianship, research, training, publishing and book trade, public relations, consultancy, and information-related business.
                     </div>
                 </div>
-                <div class="board"></div>
+                <div class="board">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pfP7AjwIZI8?si=EPNIZR_gcLQX4yRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
                 <div class="courses mis" onclick="flipcard('mis')">
                     <div class="front mst">MIS</div>
                     <div class="back mst">
                         The Master of Information Systems (MIS) 2 year masterals program is designed to provide professionals in the Information Technology industry with advanced training in information systems.
                     </div>
                 </div>
-                <div class="board"></div>
+                <div class="board">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/t7kVDxGMVM8?si=IHOp72EMMPYdmyV9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
             </div>
         </section>
     </main>
@@ -342,7 +368,7 @@
         <button class="themebtn" id="w" onclick="themer('w')" style="background-color: rgb(65, 85, 128)"></button>
         <button class="themebtn" id="m" style="background-color: palegoldenrod;" onclick="themer('m')"></button>
         <button class="themebtn" id="a" style="background-color: lightsalmon;" onclick="themer('a')"></button>
-        <button class="themebtn" id="n" style="background-color: darkslateblue;" onclick="themer('n')"></button>
+        <button class="themebtn" id="n" style="background-color: #333333;" onclick="themer('n')"></button>
     </aside>
     <aside class="cdrack">
         <button class="cd" onclick="playJuke()"></button>
