--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
                     <a href="#ajuke" class="anchs">The Jukebox</a>
                     <a href="#awpe" class="anchs">About GE10</a>
                     <a href="#adtr" class="anchs">GE10 Dates to Remember</a>
-                    <a href="#awpesite" class="anchs">GE10 Sample Site</a>
+                    <a href="#awpesite" class="anchs">GE10 Sample Sites</a>
                     <a href="#afac" class="anchs">Facilities & Pics</a>
                 </section>
                 <div class="meetcsc home" id="afaq">FAQ</div>
@@ -191,6 +191,10 @@
                     <img src="./gifs/My WPE ONline.gif" class="wpelogo" alt="">
                     <a href="https://baxstar17.github.io/WPE-Online-Journal/" class="wpelink wannaccs">Here's my GE10 Journal for reference</a>
                 </div>
+                <div class="ge10holder carlos">
+                    <div class="wpelogo cllogo">CL</div>
+                    <a href="https://greenenji.wixsite.com/college-life" class="wpelink wannaccs cllink">Sample Site from Carlos Macalolot</a>
+                </div>
                 <div class="meetcsc home" id="afac">Facilities AND PICS</div>
                 <section class="CC slideshow" style="--dur: 20s; --slids: 5;">
                     <div class="CCpics slide" style="--sl:0"><img src="./gifs/UCS (1).jpg" width="100%" height="100%" alt=""></div>
@@ -311,6 +315,13 @@
                 </div>
                 <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FConfederatesStudentCouncil%2Fposts%2Fpfbid03WDMHVNd9RCabZZC9MDNs9zCGBPRrfEdMzdgf7Dkh1qi8bkknSt529oewb9ScCa5l&show_text=true&width=500" width="100%" height="673" style="border:none; background-color: var(--lightprim); color: var(--lightprim);overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                 <img src="./gifs/upbtn.png" width="30" height="30" alt="" onclick="window.scrollTo(0, 0);" style="align-self: center; margin: 10px; cursor: pointer;">
+                <div class="meetcsc events">SY 2023-2024 MEMORIES</div>
+                <iframe src="https://drive.google.com/file/d/1THvxWTDHneyTapBTkLBGr1ONXN5mWoXe/preview" width="100%" height="480" allow="autoplay"></iframe>
+                <a href="https://drive.google.com/drive/folders/1pMn22TurwH4U8Y50iOXvCTZLwAcfhEVl?usp=sharing" class="wpelink wannaccs">Drive link for past school year memories!</a>
+                <div class="meetcsc events">IMPORTANT FORMS</div>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd2pMYrP4Cn7N-j068cRC327QkM61kWmO7eqRY12j6QZMhy1g/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"> Loading… </iframe>
+                <hr width="100%">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVVK5kY5mQPcyKCHaSgVFLHpO1gd2gIt0i9fOkgxpIiEpBJA/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"> Loading… </iframe>
             </div>
             <div class="pg four">
                 <div class="courses bscs" onclick="flipcard('bscs')">
@@ -377,6 +388,7 @@
         <a href="" class="travel"></a>
     </div>
     <aside class="themerack">
+        <span style="color: var(--monochrom); font-family: UK; font-size: 0.7em;">THEMES:</span>
         <button class="themebtn" id="w" onclick="themer('w')" style="background-color: rgb(65, 85, 128)"></button>
         <button class="themebtn" id="m" style="background-color: palegoldenrod;" onclick="themer('m')"></button>
         <button class="themebtn" id="a" style="background-color: lightsalmon;" onclick="themer('a')"></button>
@@ -385,5 +397,6 @@
     <aside class="cdrack">
         <button class="cd" onclick="playJuke()"></button>
     </aside>
+    <section class="preloader"></section>
 </body>
 </html>
