Added and sealed a favicon

--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome CCS Freshie!</title>
     <link rel="stylesheet" href="./styler.css">
+    <link rel="icon" type="image/png" href="./gifs/favic (1).png">
     <script src="./script.js"></script>
 </head>
 <body>
