--- a/index.htm
+++ b/index.htm
@@ -310,12 +310,9 @@
                 <div class="meetcsc events">
                     JOIN THE FRESHMEN GC!
                 </div>
-                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FConfederatesStudentCouncil%2Fposts%2Fpfbid06jHnbRbTc2GaQBANpSmpVhiKUptdaaZMgZHdcyHVX5isVBd8zSweugMy4vEufKRNl&show_text=true&width=500" width="100%" height="673" style="border:none; background-color: var(--lightprim); color: var(--monocont); overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                <div class="meetcsc events">
-                    LATEST NEWS FROM CONFED:
-                </div>
-                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FConfederatesStudentCouncil%2Fposts%2Fpfbid03WDMHVNd9RCabZZC9MDNs9zCGBPRrfEdMzdgf7Dkh1qi8bkknSt529oewb9ScCa5l&show_text=true&width=500" width="100%" height="673" style="border:none; background-color: var(--lightprim); color: var(--lightprim);overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                <img src="./gifs/upbtn.png" width="30" height="30" alt="" onclick="window.scrollTo(0, 0);" style="align-self: center; margin: 10px; cursor: pointer;">
+                <img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t39.30808-6/453223605_504262452122892_2743960254471017603_n.jpg?stp=dst-jpg_p526x296&_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeH18ar3OhOdKyYUC__TvPAUuGykWaVPz624bKRZpU_PrbL6RgiEJ1OQKAH_8QyW9fyJxM8jT3WWybXnX_6jqlR3&_nc_ohc=DkTJgeNGdwAQ7kNvgFc2dU6&_nc_ht=scontent.fcgy2-1.fna&oh=00_AYCa3gpDgJe87b5rfKtPy_pw7dYOROQumGiD6m5fACjLkA&oe=66B6BEF1" alt="" width="100%">
+                <a href="https://www.facebook.com/share/p/qtoWRGrH2Cm1Tm7J/" class="wpelink wannaccs">Join the Freshmen GC!</a>
+                <div class="wannaccs"></div>
                 <div class="meetcsc events">SY 2023-2024 MEMORIES</div>
                 <iframe src="https://drive.google.com/file/d/1THvxWTDHneyTapBTkLBGr1ONXN5mWoXe/preview" width="100%" height="480" allow="autoplay"></iframe>
                 <a href="https://drive.google.com/drive/folders/1pMn22TurwH4U8Y50iOXvCTZLwAcfhEVl?usp=sharing" class="wpelink wannaccs">Drive link for past school year memories!</a>
@@ -323,6 +320,7 @@
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd2pMYrP4Cn7N-j068cRC327QkM61kWmO7eqRY12j6QZMhy1g/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"> Loading… </iframe>
                 <hr width="100%">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVVK5kY5mQPcyKCHaSgVFLHpO1gd2gIt0i9fOkgxpIiEpBJA/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"> Loading… </iframe>
+                <img src="./gifs/upbtn.png" width="30" height="30" alt="" onclick="window.scrollTo(0, 0);" style="align-self: center; margin: 10px; cursor: pointer;">
             </div>
             <div class="pg four">
                 <div class="courses bscs" onclick="flipcard('bscs')">
