fixed confed pictures and added tech forms

--- a/index.htm
+++ b/index.htm
@@ -233,6 +233,7 @@
                 </div>
                 <div class="infomedia pic dark" id="off">
                     <div class="icon" id="jasp" onclick="showMod('prof', this.id)" style="top: 90px; left: 210px;--name:'Izzu Peniel Tito'; --pos: 'Infomedia Chairperson'; --pfp: url(./gifs/Infomedia\ Committee/IZZU.png)"></div>
+                    <div class="icon" id="shawn" onclick="showMod('prof', this.id)" style="top: 40px; left: 280px;--name:'Shawn Lawrence Alpas'; --pos: 'Infomedia Co-Chairperson'; --pfp: url(./gifs/Infomedia\ Committee/SHAWN.png)"></div>
                 </div>
                 <div class="meetcsc">
                     PROGRAMS COMMITTEE
@@ -309,7 +310,6 @@
                 <div class="meetcsc events">
                     JOIN THE FRESHMEN GC!
                 </div>
-                <img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t39.30808-6/453223605_504262452122892_2743960254471017603_n.jpg?stp=dst-jpg_p526x296&_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeH18ar3OhOdKyYUC__TvPAUuGykWaVPz624bKRZpU_PrbL6RgiEJ1OQKAH_8QyW9fyJxM8jT3WWybXnX_6jqlR3&_nc_ohc=DkTJgeNGdwAQ7kNvgFc2dU6&_nc_ht=scontent.fcgy2-1.fna&oh=00_AYCa3gpDgJe87b5rfKtPy_pw7dYOROQumGiD6m5fACjLkA&oe=66B6BEF1" alt="" width="100%">
                 <a href="https://www.facebook.com/share/p/qtoWRGrH2Cm1Tm7J/" class="wpelink wannaccs">Join the Freshmen GC!</a>
                 <div class="wannaccs"></div>
                 <div class="meetcsc events">SY 2023-2024 MEMORIES</div>
@@ -319,6 +319,7 @@
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd2pMYrP4Cn7N-j068cRC327QkM61kWmO7eqRY12j6QZMhy1g/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"> Loading… </iframe>
                 <hr width="100%">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVVK5kY5mQPcyKCHaSgVFLHpO1gd2gIt0i9fOkgxpIiEpBJA/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"> Loading… </iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeCGYWULYVB5t1SAB067ZGvEOAAtzFXb-8j1Pt7tsak_lfOGQ/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"> Loading… </iframe>
                 <img src="./gifs/upbtn.png" width="30" height="30" alt="" onclick="window.scrollTo(0, 0);" style="align-self: center; margin: 10px; cursor: pointer;">
             </div>
             <div class="pg four">
