--- a/index.htm
+++ b/index.htm
@@ -374,9 +374,7 @@
                         The Master of Information Systems (MIS) 2 year masterals program is designed to provide professionals in the Information Technology industry with advanced training in information systems.
                     </div>
                 </div>
-                <div class="board">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/t7kVDxGMVM8?si=IHOp72EMMPYdmyV9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
+                <a href="https://www.youtube.com/embed/t7kVDxGMVM8?si=IHOp72EMMPYdmyV9" class="wpelink wannaccs">What is MIS?</a>
                 <img src="./gifs/upbtn.png" width="30" height="30" alt="" onclick="window.scrollTo(0, 0);" style="align-self: center; margin: 10px; cursor: pointer;">
             </div>
         </section>
