--- a/index.htm
+++ b/index.htm
@@ -338,36 +338,28 @@
                         Bachelor of Science in Computer Science (BSCS) is a four-year program that includes the study of computing concepts and theories, algorithmic foundations, and new developments in computing.
                     </div>
                 </div>
-                <div class="board">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/uWT6OQ2wjvg?si=Zo4oM80PKaJvsExG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
+                <a href="https://www.youtube.com/watch?v=FrOjE7Q4vKg" class="wpelink wannaccs">What is BSCS?</a>
                 <div class="courses bsit" onclick="flipcard('bsit')">
                     <div class="front it">BSIT</div>
                     <div class="back it">
                         The Bachelor of Science in Information Technology (BSIT) is a four-year program that prepares students to be IT professionals well-versed on IT applications, including web, database, programming, and networking technologies.
                     </div>
                 </div>
-                <div class="board">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/1ac_JqEBaWY?si=jRCVb5mcdKMHWf7s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
+                <a href="https://www.youtube.com/embed/1ac_JqEBaWY?si=jRCVb5mcdKMHWf7s" class="wpelink wannaccs">What is BSIT?</a>
                 <div class="courses bsis" onclick="flipcard('bsis')">
                     <div class="front is">BSIS</div>
                     <div class="back is">
                         Bachelor of Science in Information Systems is a four-year degree program which focuses on the design and implementation of computer-based information systems and other ICT solutions to address the demands in existing business processes.
                     </div>
                 </div>
-                <div class="board">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dLfpZtIacbc?si=M9-waOe2EomFST1U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
+                <a href="https://www.youtube.com/embed/dLfpZtIacbc?si=M9-waOe2EomFST1U" class="wpelink wannaccs">What is BSIS?</a>
                 <div class="courses blis" onclick="flipcard('blis')">
                     <div class="front lis">BLIS</div>
                     <div class="back lis">
                         Bachelor of Library and Information Sciences is a four-year degree program designed to prepare students for career opportunities in professional librarianship, research, training, publishing and book trade, public relations, consultancy, and information-related business.
                     </div>
                 </div>
-                <div class="board">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pfP7AjwIZI8?si=EPNIZR_gcLQX4yRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
+                <a href="https://www.youtube.com/embed/pfP7AjwIZI8?si=EPNIZR_gcLQX4yRA" class="wpelink wannaccs">What is BLIS?</a>
                 <div class="courses mis" onclick="flipcard('mis')">
                     <div class="front mst">MIS</div>
                     <div class="back mst">
